infra/proxy/registry.gitlab.home/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: registry-gitlab-home-proxy
  namespace: infra
subsets:
  - addresses:
      - ip: 10.0.0.34
    ports:
      - port: 80
