infra/proxy/registry.gitlab.home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-gitlab-home-proxy
  namespace: infra
spec:
  ports:
  - port: 80
    targetPort: 80
  clusterIP: None
